--- a/index.html
+++ b/index.html
@@ -1,171 +1,80 @@
 <!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hot & Crust Cafe</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
-    body { background: #f8f5f2; color: #333; }
-    header { background: #3e2723; color: white; padding: 20px; text-align: center; }
-    nav { display: flex; justify-content: center; gap: 20px; margin-top: 10px; }
-    nav a { color: white; text-decoration: none; font-weight: 500; }
-    section { padding: 50px 20px; }
-    h2 { text-align: center; margin-bottom: 20px; }
-    .btn { display: inline-block; padding: 10px 20px; background: #6d4c41; color: white; border-radius: 25px; text-decoration: none; margin-top: 15px; }
-    .category { margin-bottom: 40px; }
-    .category h3 { margin-bottom: 10px; color: #6d4c41; }
-    .item { display: flex; justify-content: space-between; padding: 6px 0; border-bottom: 1px dashed #ccc; }
-    footer { background: #3e2723; color: white; padding: 20px; text-align: center; }
-  </style>
-</head>
-<body><header>
-  <h1>Hot & Crust Cafe</h1>
-  <p>Fresh Coffee • Tasty Bites • Good Vibes ☕🔥</p>
-  <nav>
-    <a href="#about">About</a>
-    <a href="#menu">Menu</a>
-    <a href="#contact">Contact</a>
-  </nav>
-</header><section id="about">
-  <h2>About Us</h2>
-  <p style="text-align:center; max-width:800px; margin:auto;">Welcome to Hot & Crust Cafe – your perfect hangout spot near South City. Located near South City, 200 meters ahead, Shahjahanpur. We serve freshly brewed coffee, cheesy delights, crispy snacks, and refreshing beverages in a cozy and friendly atmosphere.</p>
-</section><section id="menu">
-  <h2>Our Full Menu</h2>  <div class="category">
-    <h3>Burgers</h3>
-    <div class="item"><span>Veg Burger</span><span>₹49</span></div>
-    <div class="item"><span>Cheese Slice Burger</span><span>₹59</span></div>
-    <div class="item"><span>Classic Burger</span><span>₹69</span></div>
-    <div class="item"><span>Paneer Burger</span><span>₹79</span></div>
-    <div class="item"><span>UFO Burger (Special)</span><span>₹99</span></div>
-  </div>  <div class="category">
-    <h3>Pizzas (Regular / Medium / Large)</h3>
-    <div class="item"><span>Cheese Pizza</span><span>₹59 / ₹149 / ₹249</span></div>
-    <div class="item"><span>Veg Pizza</span><span>₹99 / ₹199 / ₹299</span></div>
-    <div class="item"><span>Paneer Special</span><span>₹139 / ₹239 / ₹339</span></div>
-    <div class="item"><span>Tandoori Paneer</span><span>₹169 / ₹269 / ₹369</span></div>
-    <div class="item"><span>Farmhouse</span><span>₹149 / ₹249 / ₹349</span></div>
-    <div class="item"><span>Hot & Crust Special</span><span>₹199 / ₹299 / ₹399</span></div>
-  </div>  <div class="category">
-    <h3>Pasta</h3>
-    <div class="item"><span>Kadhai Pasta</span><span>₹69</span></div>
-    <div class="item"><span>White Sauce Pasta</span><span>₹79</span></div>
-    <div class="item"><span>Red Sauce Pasta</span><span>₹89</span></div>
-    <div class="item"><span>Mushroom Pasta</span><span>₹99</span></div>
-    <div class="item"><span>Paneer Pasta</span><span>₹109</span></div>
-  </div>  <div class="category">
-    <h3>Momos</h3>
-    <div class="item"><span>Nutri Momos</span><span>₹39 / ₹69</span></div>
-    <div class="item"><span>Fried Momos</span><span>₹39 / ₹69</span></div>
-    <div class="item"><span>Paneer Momos</span><span>₹79 / ₹99</span></div>
-    <div class="item"><span>Gravy Momos</span><span>₹99 / ₹149</span></div>
-  </div>  <div class="category">
-    <h3>Chinese & Noodles</h3>
-    <div class="item"><span>French Fries</span><span>₹39 / ₹69</span></div>
-    <div class="item"><span>Peri Peri Fries</span><span>₹49 / ₹79</span></div>
-    <div class="item"><span>Spring Roll</span><span>₹59</span></div>
-    <div class="item"><span>Veg Noodles</span><span>₹69</span></div>
-    <div class="item"><span>Paneer Noodles</span><span>₹99</span></div>
-  </div>  <div class="category">
-    <h3>Chai & Coffee</h3>
-    <div class="item"><span>Regular Chai</span><span>₹20</span></div>
-    <div class="item"><span>Masala Chai</span><span>₹25</span></div>
-    <div class="item"><span>Hot Coffee</span><span>₹49</span></div>
-    <div class="item"><span>Cold Coffee</span><span>₹99</span></div>
-  </div></section><section id="contact" style="text-align:center;">
-  <h2>Contact Us</h2>
-  <p>📍 Near South City, 200 meters ahead, Shahjahanpur</p>
-  <p>📞 +91 8470979762</p>
-  <p>🕒 Open: 10:00 AM – 10:30 PM</p>
-  <p>📷 Instagram: @hotandcrust_official</p>
-  <a class="btn" href="https://wa.me/918470979762" target="_blank">Order on WhatsApp</a>
-</section><footer>
-  <p>© 2026 Hot & Crust Cafe | All Rights Reserved</p>
-</footer></body>
-                        </html><!DOCTYPE html><html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hot & Crust Cafe</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
-    body { background: #f8f5f2; color: #333; }
-    header { background: #3e2723; color: white; padding: 20px; text-align: center; }
-    nav { display: flex; justify-content: center; gap: 20px; margin-top: 10px; }
-    nav a { color: white; text-decoration: none; font-weight: 500; }
-    section { padding: 50px 20px; }
-    h2 { text-align: center; margin-bottom: 20px; }
-    .btn { display: inline-block; padding: 10px 20px; background: #6d4c41; color: white; border-radius: 25px; text-decoration: none; margin-top: 15px; }
-    .category { margin-bottom: 40px; }
-    .category h3 { margin-bottom: 10px; color: #6d4c41; }
-    .item { display: flex; justify-content: space-between; padding: 6px 0; border-bottom: 1px dashed #ccc; }
-    footer { background: #3e2723; color: white; padding: 20px; text-align: center; }
-  </style>
-</head>
-<body><header>
-  <h1>Hot & Crust Cafe</h1>
-  <p>Fresh Coffee • Tasty Bites • Good Vibes ☕🔥</p>
-  <nav>
-    <a href="#about">About</a>
-    <a href="#menu">Menu</a>
-    <a href="#contact">Contact</a>
-  </nav>
-</header><section id="about">
-  <h2>About Us</h2>
-  <p style="text-align:center; max-width:800px; margin:auto;">Welcome to Hot & Crust Cafe – your perfect hangout spot near South City. Located near South City, 200 meters ahead, Shahjahanpur. We serve freshly brewed coffee, cheesy delights, crispy snacks, and refreshing beverages in a cozy and friendly atmosphere.</p>
-</section><section id="menu">
-  <h2>Our Full Menu</h2>  <div class="category">
-    <h3>Burgers</h3>
-    <div class="item"><span>Veg Burger</span><span>₹49</span></div>
-    <div class="item"><span>Cheese Slice Burger</span><span>₹59</span></div>
-    <div class="item"><span>Classic Burger</span><span>₹69</span></div>
-    <div class="item"><span>Paneer Burger</span><span>₹79</span></div>
-    <div class="item"><span>UFO Burger (Special)</span><span>₹99</span></div>
-  </div>  <div class="category">
-    <h3>Pizzas (Regular / Medium / Large)</h3>
-    <div class="item"><span>Cheese Pizza</span><span>₹59 / ₹149 / ₹249</span></div>
-    <div class="item"><span>Veg Pizza</span><span>₹99 / ₹199 / ₹299</span></div>
-    <div class="item"><span>Paneer Special</span><span>₹139 / ₹239 / ₹339</span></div>
-    <div class="item"><span>Tandoori Paneer</span><span>₹169 / ₹269 / ₹369</span></div>
-    <div class="item"><span>Farmhouse</span><span>₹149 / ₹249 / ₹349</span></div>
-    <div class="item"><span>Hot & Crust Special</span><span>₹199 / ₹299 / ₹399</span></div>
-  </div>  <div class="category">
-    <h3>Pasta</h3>
-    <div class="item"><span>Kadhai Pasta</span><span>₹69</span></div>
-    <div class="item"><span>White Sauce Pasta</span><span>₹79</span></div>
-    <div class="item"><span>Red Sauce Pasta</span><span>₹89</span></div>
-    <div class="item"><span>Mushroom Pasta</span><span>₹99</span></div>
-    <div class="item"><span>Paneer Pasta</span><span>₹109</span></div>
-  </div>  <div class="category">
-    <h3>Momos</h3>
-    <div class="item"><span>Nutri Momos</span><span>₹39 / ₹69</span></div>
-    <div class="item"><span>Fried Momos</span><span>₹39 / ₹69</span></div>
-    <div class="item"><span>Paneer Momos</span><span>₹79 / ₹99</span></div>
-    <div class="item"><span>Gravy Momos</span><span>₹99 / ₹149</span></div>
-  </div>  <div class="category">
-    <h3>Chinese & Noodles</h3>
-    <div class="item"><span>French Fries</span><span>₹39 / ₹69</span></div>
-    <div class="item"><span>Peri Peri Fries</span><span>₹49 / ₹79</span></div>
-    <div class="item"><span>Spring Roll</span><span>₹59</span></div>
-    <div class="item"><span>Veg Noodles</span><span>₹69</span></div>
-    <div class="item"><span>Paneer Noodles</span><span>₹99</span></div>
-  </div>  <div class="category">
-    <h3>Chai & Coffee</h3>
-    <div class="item"><span>Regular Chai</span><span>₹20</span></div>
-    <div class="item"><span>Masala Chai</span><span>₹25</span></div>
-    <div class="item"><span>Hot Coffee</span><span>₹49</span></div>
-    <div class="item"><span>Cold Coffee</span><span>₹99</span></div>
-  </div></section><section id="contact" style="text-align:center;">
-  <h2>Contact Us</h2>
-  <p>📍 Near South City, 200 meters ahead, Shahjahanpur</p>
-  <p>📞 +91 8470979762</p>
-  <p>🕒 Open: 10:00 AM – 10:30 PM</p>
-  <p>📷 Instagram: @hotandcrust_official</p>
-  <a class="btn" href="https://wa.me/918470979762" target="_blank">Order on WhatsApp</a>
-</section><footer>
-  <p>© 2026 Hot & Crust Cafe | All Rights Reserved</p>
-</footer></body>
-                          </html>
-<!--update-->
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Hot & Crust Cafe</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+<style>
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;scroll-behavior:smooth}
+body{background:#fff8f0;color:#333}header{ background:linear-gradient(135deg,#3e2723,#8d6e63); color:#fff; padding:20px; text-align:center; position:sticky; top:0; z-index:1000; box-shadow:0 5px 20px rgba(0,0,0,0.2) }
 
+header h1{font-size:30px;font-weight:700} header p{font-size:14px;opacity:.9}
+
+nav a{ color:white; text-decoration:none; margin:0 12px; font-weight:500; transition:.3s } nav a:hover{color:#ffd180}
+
+.hero{ height:90vh; display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center; color:white; background:url('https://images.unsplash.com/photo-1509042239860-f550ce710b93') center/cover; animation:fadeIn 2s ease-in-out }
+
+.hero h2{font-size:40px;margin-bottom:10px;text-shadow:2px 2px 10px rgba(0,0,0,0.5)} .hero p{font-size:18px;margin-bottom:20px}
+
+.btn{ background:#ff7043; color:white; padding:12px 30px; border-radius:30px; text-decoration:none; font-weight:600; transition:.3s } .btn:hover{background:#e64a19;transform:scale(1.05)}
+
+section{padding:70px 20px} h2{text-align:center;margin-bottom:40px;font-size:30px}
+
+.menu-grid{ display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:30px }
+
+.card{ background:white; padding:25px; border-radius:20px; box-shadow:0 10px 25px rgba(0,0,0,0.1); transition:.4s; text-align:center; animation:slideUp 1s ease forwards; opacity:0 }
+
+.card:hover{transform:translateY(-10px);box-shadow:0 15px 35px rgba(0,0,0,0.2)} .card h3{color:#6d4c41;margin-bottom:10px} .price{color:#ff7043;font-weight:bold}
+
+.contact-box{ background:#fff; max-width:750px; margin:auto; padding:35px; border-radius:20px; box-shadow:0 10px 30px rgba(0,0,0,0.15); text-align:center }
+
+footer{ background:#3e2723; color:white; padding:20px; text-align:center }
+
+@keyframes fadeIn{ from{opacity:0} to{opacity:1} }
+
+@keyframes slideUp{ from{transform:translateY(40px);opacity:0} to{transform:translateY(0);opacity:1} }
+
+.card:nth-child(1){animation-delay:.2s} .card:nth-child(2){animation-delay:.4s} .card:nth-child(3){animation-delay:.6s} .card:nth-child(4){animation-delay:.8s}
+
+</style>
+</head>
+<body><header>
+<h1>☕ Hot & Crust Cafe 🍕</h1>
+<p>Fresh Coffee • Tasty Bites • Good Vibes 😍🔥</p>
+<nav>
+<a href="#menu">Menu 🍔</a>
+<a href="#contact">Contact 📍</a>
+</nav>
+</header><section class="hero">
+<h2>Welcome to Shahjahanpur's Favorite Cafe 😎</h2>
+<p>Best Hangout Spot Near South City 💫</p>
+<a href="#menu" class="btn">Explore Menu 🍕</a>
+</section><section id="menu">
+<h2>🔥 Our Special Items 🔥</h2>
+<div class="menu-grid"><div class="card">
+<h3>🍕 Cheese Pizza</h3>
+<p class="price">Starting ₹59</p>
+</div><div class="card">
+<h3>🍔 Paneer Burger</h3>
+<p class="price">₹79</p>
+</div><div class="card">
+<h3>🍝 White Sauce Pasta</h3>
+<p class="price">₹79</p>
+</div><div class="card">
+<h3>🥤 Cold Coffee</h3>
+<p class="price">₹99</p>
+</div></div>
+</section><section id="contact">
+<h2>📍 Visit Us Today!</h2>
+<div class="contact-box">
+<p><strong>Address:</strong> Near South City, 200 meters ahead, Shahjahanpur</p>
+<p><strong>Phone:</strong> +91 8470979762</p>
+<p><strong>Open:</strong> 10:00 AM – 10:30 PM</p>
+<p><strong>Instagram:</strong> @hotandcrust_official 📷</p>
+<br>
+<a class="btn" href="https://wa.me/918470979762" target="_blank">Order on WhatsApp 📲</a>
+</div>
+</section><footer>
+<p>© 2026 Hot & Crust Cafe | Made with ❤️ in Shahjahanpur</p>
+</footer></body>
+</html>
